<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Android Simple Test Application</string>
    	<string name="res0">null</string>
    	<string name="res1">null</string>
    	<string name="res2">Bottom</string>
    	<string name="res3">Testing...</string>
    	<string name="res4">Button2</string>
    	<string name="res5">Button1</string>
    	<string name="res6">Your fullname is </string>
    	<string name="res7">Resolve FullName</string>
    	<string name="res8">Enter lastname: </string>
    	<string name="res9">Enter firstname: </string>
</resources>

